--- a/blocks/body.css
+++ b/blocks/body.css
@@ -8,4 +8,10 @@
     text-rendering: optimizeLegibility;
     max-width: 1280px;
     margin: 0 auto;
+        font-family: "Inter",
+        Arial,
+        sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.22;
 }
