--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -6,8 +6,7 @@
     gap: 30px;
     align-items: center;
     margin: 0 auto;
-    padding-bottom: 50px;
-
+    padding:40px 0 50px;
 }
 
 .profile__image {
