refactor:fixed overflow - and some sizing

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -17,7 +17,7 @@
 }
 
 .form__input {
-    padding: 13px 7px;
+    padding: 13px 7px 9px;
     border-top: 0;
     border-left: 0;
     border-right: 0;
@@ -47,5 +47,20 @@
     .form {
         width: 100%;
         max-width: none;
+        gap: 46px;
+    }
+
+    .form__button {
+        padding: 14px 100px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+
+    }
+
+    .form__input {
+        max-width: 238px;
+        padding: 7px 0 12px;
+
     }
 }
