--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,26 +1,26 @@
 .header {
     max-width: 880px;
-    margin:0 auto;
-     border-bottom: #545454 solid 1px;
-     padding: 45px 0 0 ;
+    margin: 45px auto 0;
+    border-bottom: rgba(54, 54, 54, 0.7) solid 1px;
+    padding: 0;
 }
 
 .header__logo {
     max-width: 173px;
     max-height: 33px;
-    margin: 0 0 41px;
+    margin-bottom: 41px;
+    padding: 0;
 }
-
 
 @media screen and (max-width: 320px) {
     .header {
-        margin: 28px auto 32px;
+        max-width: 100%;
+        margin-top: 28px;
     }
 
     .header__logo {
         max-width: 126px;
-
         max-height: 24px;
-        margin-left: 27px;
+        margin: 0 auto 32px 27px;
     }
 }
