--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -6,7 +6,10 @@
     gap: 30px;
     align-items: center;
     margin: 0 auto;
-    padding:40px 0 50px;
+    padding: 40px 0 50px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .profile__image {
@@ -15,23 +18,36 @@
     max-height: 120px;
 }
 
-.profile__info {
-    flex-grow: 1;
-}
-
 .profile__person {
     display: flex;
     gap: 18px;
     align-items: flex-end;
 }
 
-.profile__name {
- padding: 0;
- margin: 0;
- font-weight: 500;
- font-size: 42px;
- line-height: 48px;
+.profile__info {
+    flex-grow: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 
+.profile__name {
+    padding: 0;
+    margin: 0;
+    font-weight: 500;
+    font-size: 42px;
+    line-height: 48px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.profile__title {
+    padding: 0;
+    margin: 16px 0 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .profile__edit-button {
@@ -48,16 +64,10 @@
     background-size: 10px 10px;
     padding: calc(9px + (10px / 4));
     border: #fff solid 1px;
-
 }
 
 .profile__edit-button:hover {
     opacity: 0.6;
-}
-
-.profile__title {
-    padding: 0;
-    margin: 9px 0 0;
 }
 
 .profile__add-button {
@@ -82,10 +92,19 @@
     .profile__name {
         font-size: 28px;
         line-height: 1;
+        max-width: 282px;
     }
 
     .profile__edit-button {
         margin-bottom: 2px;
+    }
+
+    .profile {
+        max-width: 760px;
+    }
+
+    .profile__title {
+        max-width: 282px;
     }
 }
 
@@ -93,6 +112,15 @@
     .profile {
         flex-direction: column;
         text-align: center;
+        max-width: 630px;
+    }
+
+    .profile__title {
+        max-width: 282px;
+    }
+
+    .profile__name {
+        max-width: 282px;
     }
 }
 
@@ -101,6 +129,18 @@
         width: 100%;
         margin-top: 0px;
     }
+
+    .profile {
+        max-width: 400px;
+    }
+
+    .profile__title {
+        max-width: 282px;
+    }
+
+    .profile__name {
+        max-width: 282px;
+    }
 }
 
 @media screen and (max-width: 320px) {
@@ -108,6 +148,8 @@
         margin-bottom: 36px;
         gap: 33px;
         padding: 0;
+        margin-top: 42px;
+        max-width: 282px;
     }
 
     .profile__person {
@@ -117,6 +159,7 @@
     .profile__name {
         font-size: 22px;
         line-height: 1.2;
+        max-width: 196px;
     }
 
     .profile__edit-button {
