--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -12,7 +12,7 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 1.22;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .popup_opened {
@@ -69,7 +69,6 @@
     .popup {
         max-width: 282px;
         padding: 0 19px;
-        margin: 0;
 
     }
 
