feat:added JavaScript code (add/delete/preview/like) for photos

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,6 +1,8 @@
 .card {
-    margin: 0;
-    padding: 0;
+    position: relative;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .card__image {
@@ -14,18 +16,17 @@
 }
 
 .card__image-trash {
-    background-image: url('../images/icons/trash.svg');
-    background-color: transparent;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    border: 0px;
-    width: 18px;
-    height: 19px;
     position: absolute;
-    right: 16px;
     top: 18px;
-    transition: opacity linear 0.45s;
+    right: 15px;
+    cursor: pointer;
+    background-color: transparent;
+    background-image: url("../images/icons/trash.svg");
+    min-height: 19px;
+    min-width: 18px;
+    background-position: center;
+    background-size: cover;
+    border: none;
 }
 
 .card__info {
