--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -13,15 +13,15 @@
     line-height: 1.22;
     margin: 0 auto;
     display: flex;
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s,
+    transition: visibility 0s 0.5s,
         opacity 0.5s linear;
+    visibility: hidden;
 }
 
 .popup_opened {
     visibility: visible;
-    opacity: 1;
+    transition: visibility 0s,
+        opacity 0.5s linear;
 }
 
 .popup__container {
