codded some form validity code

--- a/blocks/form.css
+++ b/blocks/form.css
@@ -47,14 +47,25 @@
     border-bottom: 1px solid #FF0000;
 }
 
+.form__input-type-profile-name {}
+
+.form__input-type-profile-subname {}
+
 .form__input-type-place-name {}
 
-.place-url-input-error {}
+.form__input-type-place-url {}
 
 .form__input::placeholder {
     color: #000;
 }
 
+.form__button_disabled,
+.form__button_disabled:hover {
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0, 0.2);
+    cursor: default;
+}
 
 .form__button {
     background: #000;
