--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -21,7 +21,7 @@
     right: 15px;
     cursor: pointer;
     background-color: transparent;
-    background-image: url("../src/images/icons/trash.svg");
+    background-image: url("../images/icons/trash.svg");
     min-height: 19px;
     min-width: 18px;
     background-position: center;
@@ -57,7 +57,7 @@
     background-color: transparent;
     border: none;
     padding: 0;
-    background-image: url(../src/images/icons/like.svg);
+    background-image: url(../images/icons/like.svg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -72,5 +72,5 @@
 }
 
 .card__like-button_active {
-    background-image: url(../src/images/icons/like_filled.svg);
+    background-image: url(../images/icons/like_filled.svg);
 }
