--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 @import url(../vendor/normalize.css);
-@import url(../fonts/font.css);
+@import url(../vendor/fonts/font.css);
 @import url(../blocks/header.css);
 @import url(../blocks/popup.css);
 @import url(../blocks/cards.css);
