--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -37,6 +37,9 @@
     align-items: center;
     padding: 20px 15px 24px 21px;
     border-radius: 0 0 10px 10px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .card__info-title {
@@ -65,6 +68,14 @@
     min-height: 19px;
     transition: all 0.2s ease-out;
     cursor: pointer;
+}
+
+.card__like-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
 }
 
 .card__like-button:hover {
