--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -12,6 +12,35 @@
     white-space: nowrap;
 }
 
+.profile__image-container {
+    position: relative;
+    border-radius: 100px;
+    height: 120px;
+    width: 120px;
+}
+
+.profile__image-container::before {
+    cursor: pointer;
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-radius: 100px;
+    height: 100%;
+    z-index: 5;
+    transition: background-color 0.4s ease-out;
+}
+
+.profile__image-container:hover::before {
+    background-color: rgba(0, 0, 0, 0.8);
+    background-image: url("../images/icons/edit_icon.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20px;
+}
+
 .profile__image {
     border-radius: 50%;
     max-width: 120px;
